# ProyectoApolo11

./: README.md  pyproject.toml
proyecto_final/: .gitignore
proyecto_final/module1/: config.json  generateFile.py  generateFolder.py  main.py  status.py
proyecto_final/module1/helpers/: create_random_number.py  generate_hash.py
proyecto_final/module2/: create_dataframe.py  informes.py  main.py
tests/: test_dataframe
